[gd_scene load_steps=3 format=3 uid="uid://cajic5aowmhbk"]

[ext_resource type="Script" path="res://scenes/play_screen/step_9.gd" id="1_t4xsv"]
[ext_resource type="PackedScene" uid="uid://basr5mxkjqjlv" path="res://models/card/visual_card.tscn" id="2_gef6h"]

[node name="Step9" type="BoxContainer"]
script = ExtResource("1_t4xsv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "转移客人"
horizontal_alignment = 1

[node name="VisualCard" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_gef6h")]
unique_name_in_owner = true
layout_mode = 2
selectable = false

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "选择目标"

[node name="TargetContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[connection signal="hidden" from="." to="." method="_on_hidden"]
